--- a/AIS Cinema/Areas/Admin/Views/Tickets/Index.cshtml
+++ b/AIS Cinema/Areas/Admin/Views/Tickets/Index.cshtml
@@ -51,7 +51,7 @@
             <td>
                     @* <a asp-action="Edit" asp-route-id="@item.Id">Редактировать</a> | *@
                     <a asp-action="Details" asp-route-id="@item.Id">Подробнее</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Удалить</a>
+                    @* <a asp-action="Delete" asp-route-id="@item.Id">Удалить</a> *@
             </td>
         </tr>
 }
