--- a/AIS Cinema/Views/TelegramBinding/Login.cshtml
+++ b/AIS Cinema/Views/TelegramBinding/Login.cshtml
@@ -19,6 +19,9 @@
                     <input type="submit" value="Подтвердить" class="btn btn-primary" />
                 </div>
             </form>
+            <div class="mt-3">
+                <p>Еще не зарегистрированы? <a asp-area="Identity" asp-page="/Account/Register" class="link-primary">Зарегистрироваться</a></p>
+            </div>
         </section>
     </div>
 </div>
